--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,8 +1,6 @@
 body{
-    background: rgb(148,78,252);
-    background: linear-gradient(166deg, rgba(148,78,252,1) 0%, rgba(11,37,229,1) 100%);
-    /* background: rgb(237,206,25);
-    background: linear-gradient(166deg, rgba(237,206,25,1) 0%, rgba(230,153,7,1) 100%); */
+    background: rgb(255,106,0);
+    background: linear-gradient(166deg, rgba(255,106,0,1) 11%, rgba(0,0,0,1) 100%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,6 +21,19 @@ body{
     padding: 10px 0 1.3em;
 }
 
+.container{
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 8px 11px 15px 9px rgba(0, 0, 0, 0.35);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 550px;
+}
+
+.heigth-all {min-height: 663px;}
+
 .form-login  {
     display: flex;
     flex-direction: column;
@@ -37,6 +48,22 @@ body{
     width: 57%;
 }
 
+.container button , .btn-signin{
+    background-color: #512da8;
+    color: #fff;
+    font-size: 12px;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    position: relative;
+    cursor: pointer;
+    z-index: 9999;
+}
+
 .value-rigth {
     padding: 1em;
     width: 40%;
@@ -48,18 +75,49 @@ body{
     display: none;
 }
 
+.container a{
+    font-size: 13px;
+    text-decoration: none;
+    margin: 15px 0 10px;
+}
+
+.icon {
+    color: #000;
+}
+
+
+.btns-form::before {
+    content: "";
+    border-radius: 8px;
+    display: inline-block;
+    width: 100%;
+    height: 34px;
+    position: absolute;
+    top: 0px;
+    left: 0;
+    z-index: -1;
+  }
+  
+  .btns-form:hover::before {
+    background-color: #f5762a;
+    animation: move 1.3s forwards;
+  }
+  
+  
+  @keyframes move {
+    0% {
+      clip-path: inset(0 100% 0 0);
+    }
+    
+    100% {
+      clip-path: inset(0 0 0 0);
+    }
+  }
+  
+
 @media ( width > 775px) {
     
-.container{
-    background-color: #fff;
-    border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
-    position: relative;
-    overflow: hidden;
-    width: 768px;
-    max-width: 100%;
-    min-height: 590px;
-}
+
 
 .container p{
     font-size: 14px;
@@ -72,25 +130,12 @@ body{
     font-size: 12px;
 }
 
-.container a{
-    color: #333;
-    font-size: 13px;
-    text-decoration: none;
-    margin: 15px 0 10px;
-}
 
-.container button{
-    background-color: #512da8;
+
+
+
+.btn-signin {
     color: #fff;
-    font-size: 12px;
-    padding: 10px 45px;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    margin-top: 10px;
-    cursor: pointer;
 }
 
 .container button.hidden{
@@ -126,6 +171,7 @@ body{
 .form-container{
     position: absolute;
     top: 0;
+    right: 0;
     height: 100%;
     transition: all 0.6s ease-in-out;
 }
@@ -141,18 +187,7 @@ body{
     opacity: 1;
     z-index: 5;
     animation: move 0.6s;
-} */
-/* 
-@keyframes move{
-    0%, 49.99%{
-        opacity: 0;
-        z-index: 1;
-    }
-    50%, 100%{
-        opacity: 1;
-        z-index: 5;
-    }
-} */
+}
 
 .social-icons{
     margin: 20px 0;
@@ -172,13 +207,14 @@ body{
 .toggle-container{
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 0;
     width: 50%;
     height: 100%;
     overflow: hidden;
     transition: all 0.6s ease-in-out;
-    border-radius: 150px 0 0 100px;
     z-index: 1000;
+    border-top-right-radius: 29%;
+    border-bottom-right-radius: 31%;
 }
 
 .toggle{
