--- a/static/css/home.css
+++ b/static/css/home.css
@@ -36,7 +36,7 @@
 }
 
 .currency-actual p {
-    font-size: 44px;
+    font-size: 36px;
 }
 
 .ul-btn-cursor {
@@ -56,6 +56,33 @@
     border: 1px solid #000;
     width: 30%;
 }
+
+.btn-options-cursor {
+    margin-bottom: 20px;
+
+}
+
+/* CLIENT */
+
+.details-about {
+    position: relative;
+}
+
+.container-about-client {
+    position: absolute;
+    width: 38%;
+    border-radius: 29px;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    left: 105%;
+    align-items: center;
+    top: -196px;
+    background-color: #fe5f00;
+
+}
+
+/* END CLIENT */
 
 .option-pc {
     color: #fff;
@@ -86,12 +113,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
 
 .h2-history {
     font-size: 3em;
     font-weight: bolder;
+    text-align: center;
 }
 
 .radius-link {
@@ -115,6 +142,7 @@
 .ul-list-transactions {
     display: flex;
     flex-direction: column;
+    gap: 19px;
 }
 
 .list-transation-none {
