--- a/templates/Login.html
+++ b/templates/Login.html
@@ -18,7 +18,7 @@
         <div class="container" id="container">
             <div class="form-container signin">
                 <form action="/Home" method="post">
-                    <p style="color: red;">{{error}}</p>
+                    <p style="color: red;">{{error_message}}</p>
                     <h1>Log In</h1>
                     <div class="social-icons">
                         <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -29,16 +29,15 @@
                     <span>or use your email password</span>
                     <input type="text" id="username" name="username" placeholder="Username">
                     <input type="password" id="password" name="password" placeholder="Password">
-                    <a href="#">Forget Your Password?</a>
-                    <button type="submit">Sign In</button>
+                    <button class="btns-form" type="submit">Log in</button>
                 </form>
             </div>
             <div class="toggle-container">
                 <div class="toggle">
                     <div class="toggle-panel toggle-left">
                         <h1>Welcome Back!</h1>
-                        <p>Enter your personal details to use all of site features</p>
-                        <button class="hidden" id="login">Sign In</button>
+                        <p>No tienes correo? No te preocupes, Registrate aqui </p>
+                        <a href="Signin" class="btn-signin btns-form" id="login">Sign In</a>
                     </div>
                 </div>
                 
