--- a/templates/Login.html
+++ b/templates/Login.html
@@ -16,7 +16,7 @@
 <body data-barba="wrapper">
     <div data-barba="container" data-barba-namespace="home">
         <div class="container" id="container">
-            <div class="form-container signin">
+            <div class="form-container signin form-left">
                 <form action="/Home" method="post">
                     <p style="color: red;">{{error_message}}</p>
                     <h1>Log In</h1>
@@ -32,9 +32,9 @@
                     <button class="btns-form" type="submit">Log in</button>
                 </form>
             </div>
-            <div class="toggle-container">
-                <div class="toggle">
-                    <div class="toggle-panel toggle-left">
+            <div class="toggle-container toggle-container-rigth">
+                <div class="toggle toogle-rigth-principal">
+                    <div class="toggle-panel toggle-rigth">
                         <h1>Welcome Back!</h1>
                         <p>No tienes correo? No te preocupes, Registrate aqui </p>
                         <a href="Signin" class="btn-signin btns-form" id="login">Sign In</a>
