--- a/templates/deposit.html
+++ b/templates/deposit.html
@@ -14,7 +14,7 @@
         <header id="header-all-container">
             <div class="container-header">
                 <div class="wrapper header-wrapper">
-                    <a href="index">
+                    <a href="Home">
                         <div class="title-header">
                         <img src="../static/img/logo Bank.jpeg" style="width: 69px;" alt="salame bank logo">
                             <h1 class="title_bank_principal">Salame Bank</h1>
