--- a/templates/transfer.html
+++ b/templates/transfer.html
@@ -14,7 +14,7 @@
         <header id="header-all-container">
             <div class="container-header">
                 <div class="wrapper header-wrapper">
-                    <a href="index">
+                    <a href="Home">
                         <div class="title-header">
                         <img src="../static/img/logo Bank.jpeg" style="width: 69px;" alt="salame bank logo">
                             <h1 class="title_bank_principal">Salame Bank</h1>
@@ -32,15 +32,15 @@
                     <ul>
                         <li class="form-li">
                             <input type="text" name="receiver" id="receiver" required>
-                            <label class="center" for="money">Usuario a depositar</label>
+                            <label class="origin" for="money">Usuario a depositar</label>
                         </li>
                         <li class="form-li">
-                            <input type="number" name="money" id="money" required>
-                            <label class="center" for="money">Dinero a depositar</label>
+                            <input type="number" class="input-transfer-money" name="money" id="money" required>
+                            <label class="center middle-transfer" for="money">Dinero a depositar</label>
                         </li>
                         <li class="form-li label-top">
-                            <input class="input-top-left2" type="password" name="password" id="password" required>
-                            <label class="top-left" for="password">Ingrese su contraseña</label>
+                            <input class="input-top-left2 input-transfer" type="password" name="password" id="password" required>
+                            <label class="top-left bottom-tranfer" for="password">Ingrese su contraseña</label>
                         </li>
                     </ul>
     
